When dealing with multiple related items the delete icon was off-screen, due to an optimisation for the single-item version. Fixes #418

--- a/Stoolball.Web/css/related-items.scss
+++ b/Stoolball.Web/css/related-items.scss
@@ -80,9 +80,11 @@
     height: 0;
 }
 
+// Used in both versions - box-sizing ensures the width is consistent in both contexts
 .related-item__delete {
     width: 35px;
     text-align: right;
+    box-sizing: content-box;
 }
 
 .related-item__delete button {
